--- a/public/frontend/rezyme/stylesheets/layout.css
+++ b/public/frontend/rezyme/stylesheets/layout.css
@@ -1,13 +1,13 @@
-/*  
-Theme Name: Rezyme - Free Onepage CV/Resume Template 
-Description:  Responsive Resume is a clean resume template, which comes in 5 different colors, and can be use for any kind of bussines domain that you working.Display your professional skills,   		 			 education, portfolio,employment education in a new solid way, on every device, from phone, tablet, to desktop. 
+/*
+Theme Name: Rezyme - Free Onepage CV/Resume Template
+Description:  Responsive Resume is a clean resume template, which comes in 5 different colors, and can be use for any kind of bussines domain that you working.Display your professional skills,   		 			 education, portfolio,employment education in a new solid way, on every device, from phone, tablet, to desktop.
 Version: 1.0
 Author: Themeplanet
 Author URI: http://themepla.net
 */
 
 /* #Site Styles
-================================================== 
+==================================================
 1.0 General Typorgraphy
 2.0 Common Preset
 3.0 Header
@@ -19,7 +19,7 @@ Author URI: http://themepla.net
 9.0 Footer Area
 ================================================== */
 /*========================================
- 	==== 1.0 General Typorgraphy ====  
+ 	==== 1.0 General Typorgraphy ====
 ========================================*/
 @import 'https://fonts.googleapis.com/css?family=Lato:300,400,700,900';
 
@@ -69,10 +69,10 @@ section{
 
 
 /*========================================
- 	==== End General Typorgraphy ====  
+ 	==== End General Typorgraphy ====
 ========================================*/
 /*========================================
- 	==== 2.0 Common Preset ====  
+ 	==== 2.0 Common Preset ====
 ========================================*/
 .no_padding_left{
 	padding-left:0px !important;
@@ -92,7 +92,7 @@ section{
 	padding: 8px 10px;
 	border-width:2px !important;
 	background:#fcfcfc;
-	
+
 }
 .rzm_button a:hover{
 	color:#fff !important;
@@ -109,10 +109,10 @@ section{
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 1px rgba(0, 179, 171, 1) !important;
 }
 /*========================================
- 	==== End Common Preset ====  
+ 	==== End Common Preset ====
 ========================================*/
 /*========================================
- 	==== 3.0 Header ====  
+ 	==== 3.0 Header ====
 ========================================*/
 .img-circle {
    -moz-border-radius: 50% !important;
@@ -151,7 +151,7 @@ section{
 }
 .rzm_profile_nav ul{
  list-style:none;
- 
+
 }
 .rzm_profile_nav .primary li {
  color:#373737;
@@ -185,11 +185,11 @@ section{
 
 
 /*========================================
- 	==== End Header ====  
+ 	==== End Header ====
 ========================================*/
 
 /*========================================
- 	====4.0 Profile ====  
+ 	====4.0 Profile ====
 ========================================*/
 .rez_about{
 	position:relative;
@@ -212,14 +212,14 @@ h1.title {
 	text-align:center;
 	font-size:28px;
 	font-family: 'Lato', sans-serif; font-weight:700;
-	padding: 135px 0 36px 0;
+	padding: 30px 0 36px 0;
 }
 .rzm_progress_bar{
 }
 .rzm_progress_bar h4{
 	color:#808080 !important;
 	font-family: 'Lato', sans-serif; font-weight:900;
-	
+
 }
 .rzm_progress_bar .progress {
     height: 3px !important;
@@ -236,25 +236,25 @@ h1.title {
 }
 .progress-bar {
 	-webkit-transition:all 0.8s ease-in-out;
-    -moz-transition:all 0.8s ease-in-out;  
-    -o-transition:all 0.8s ease-in-out;         
-    transition:all 0.8s ease-in-out;  
+    -moz-transition:all 0.8s ease-in-out;
+    -o-transition:all 0.8s ease-in-out;
+    transition:all 0.8s ease-in-out;
 }
 
 /*========================================
- 	====End Profile ====  
+ 	====End Profile ====
 ========================================*/
 
 .about{
 	padding-right: 0px !important;
-    padding-left: 0px !important; 
-	
+    padding-left: 0px !important;
+
 	}
 .about_info{
 	line-height: 36px;
     font-size: 18px;
 	font-family: 'Lato', sans-serif; font-weight:400;
-	margin: 19px 0 110px 0;
+	margin: 19px 0 100px 0;
 }
 .about_info a{
 	color:#00bbcc;
@@ -263,13 +263,13 @@ h1.title {
 
 
 /*========================================
- 	====5.0 Experience Timeline ====  
+ 	====5.0 Experience Timeline ====
 ========================================*/
 
 #rzm_timeline {
   list-style: none;
   position: relative;
-  
+
 }
 #rzm_timeline:before {
   top: 0;
@@ -365,7 +365,7 @@ h1.title {
   color: #808080;
   font-family: 'Lato', sans-serif; font-weight:700;
   font-size:15px;
- 
+
 }
 .rzm_timeline-panel-ul li{
 	line-height:17px !important;
@@ -401,18 +401,18 @@ span.rzm_importo:hover,.rzm_timeline-panel-ul span.importo:hover{
 }
 .active li .rzm_importo{
 	color:#0abfbf;
-	
+
 }
 #rzm_timeline .rzm_timeline-badge.active_box{
 	background-color:#0abfbf;
 }
 /*========================================
- 	====End experience Timeline ====  
+ 	====End experience Timeline ====
 ========================================*/
 
 
 /*========================================
- 	====6.0 Clients Area====  
+ 	====6.0 Clients Area====
 ========================================*/
 .rzm_client p{
 	font-size:28px;
@@ -424,7 +424,7 @@ span.rzm_importo:hover,.rzm_timeline-panel-ul span.importo:hover{
 .rzm_client small{
 	font-size:16px;
 	color:#808080;
-	font-family: 'Lato', sans-serif; 
+	font-family: 'Lato', sans-serif;
 	font-weight:700;
 }
 .rzm_client_img{
@@ -437,11 +437,11 @@ span.rzm_importo:hover,.rzm_timeline-panel-ul span.importo:hover{
 
 
 /*========================================
- 	====End Clients Area ====  
+ 	====End Clients Area ====
 ========================================*/
 
 /*========================================
- 	====7.0 Testimonial Area ====  
+ 	====7.0 Testimonial Area ====
 ========================================*/
 .rzm_testimonial_content {
 	margin-top: 62px;
@@ -521,11 +521,11 @@ span.rzm_importo:hover,.rzm_timeline-panel-ul span.importo:hover{
 }
 
 /*========================================
- 	====End Testimonial Area ====  
+ 	====End Testimonial Area ====
 ========================================*/
 
 /*========================================
- 	====8.0 Contact Area ====  
+ 	====8.0 Contact Area ====
 ========================================*/
 .rzm_contact{
 	padding-bottom:170px;
@@ -533,8 +533,8 @@ span.rzm_importo:hover,.rzm_timeline-panel-ul span.importo:hover{
 }
 .rzm_contact .input-group{
 	float:left !important;
-	padding:10px 15px !important;
-	
+    padding: 10px !important;
+
 }
 
 .rzm_contact .input-group input{
@@ -571,11 +571,11 @@ span.rzm_importo:hover,.rzm_timeline-panel-ul span.importo:hover{
 .main-btn{ background:#00bbcc; border-color:#00bbcc; color:#fff;min-width:160px;min-height:50px;font-family: 'Lato', sans-serif;font-size:18px !important; font-weight:900 !important;}
 .main-btn:hover{ background:#00c2cc;color:#fff !important;}
 /*========================================
- 	====End Contact Area ====  
+ 	====End Contact Area ====
 ========================================*/
 
 /*========================================
- 	====9.0 Footer Area ====  
+ 	====9.0 Footer Area ====
 ========================================*/
 .rzm_footer{
 	width:100%;
@@ -608,5 +608,5 @@ span.rzm_importo:hover,.rzm_timeline-panel-ul span.importo:hover{
 	margin:20px 0 40px 0;
 }
 /*========================================
- 	====End Footer Area ====  
+ 	====End Footer Area ====
 ========================================*/
